--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 server.port=8764
 spring.application.name=zhangsanService
-eureka.client.service-url.defaultZone=http://localhost:8\
-  761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
